--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link href="css/panels.css" rel="stylsheet" />
+	<link href="css/panels.css" rel="stylesheet" />
 	<script src="js/modernizr.custom.49584.js"></script>
 </head>
 <body>
