--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html class="no-js" lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link href="css/panels.css" rel="stylsheet" />
+
+	<link href="css/panels.css" rel="stylesheet" />
 	<script src="js/modernizr.custom.49584.js"></script>
 </head>
 <body>
@@ -11,6 +12,9 @@
 		<div class="panel" id="panel0">
 			 <h1>Panel Title 1</h1>
 
+			<p>Test line 1</p>
+			<p>Test line 1</p>
+			<p>Test line 1</p>
 			<p>Test line 1</p>
 		</div>
 		<div class="panel" id="panel1">
