--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 			 <h1>Panel Title 2</h1>
 			<p>Test line 2</p>
 		</div>
+		<div class="panel" id="panel2">
+			 <h1>Panel Title 3</h1>
+			<p>blah</p>
+			<p>blah</p>
+			<p>blah</p>
+			<p>blah</p>
+			<p>blah</p>
+			<p>blah</p>
+		</div>
 	</section>
 	<script src="js/jquery-1.9.1.min.js"></script>
 	<script src="js/panels.js"></script>
